# stock_dashboard

./: .codex.deploy.json  .gitignore  .largefile-allow  .largefile-manifest.json  AGENTS.md  CLAUDE.md  DECISIONS.md  PROCESS.md  PROJECT_PLAN.md  PROJECT_RULES.md  PROJECT_STATUS.json  README.md  RESEARCH_NOTES.md  pyproject.toml
.github/: pull_request_template.md
frontend/: index.html  package-lock.json
output/: policy-governance-audit.json
scripts/: backfill_shortpick_prefreeze_20260508_paper_tracking.py  backfill_shortpick_tushare_history.py  build_shortpick_strategy_slice_evidence.py  check-agent-constraints.sh  install-git-hooks.sh  migrate_005_add_market_cap_columns.py  publish-local-runtime.sh  run-scheduled-refresh.sh  run_shortpick_staged_backtests.py  start-local-backend.sh  start-local-frontend.sh  test-runtime-integration.sh  verify-deploy.sh
tests/: helpers_autonomous_flow_scheduler.py  helpers_autonomous_flow_scheduler_execution.py  helpers_cli_autonomous_flow.py  helpers_cli_autonomous_flow_attempt_recording.py  helpers_cli_autonomous_flow_attempt_route.py  helpers_cli_autonomous_flow_execution.py  helpers_cli_autonomous_flow_smoke.py  test_agent_constraints.py  test_akshare_timeout_static.py  test_analysis_pipeline.py  test_api_access.py  test_autonomous_flow.py  test_autonomous_flow_artifacts.py  test_autonomous_flow_closeout.py  test_autonomous_flow_planner.py  test_autonomous_flow_resolver.py  test_autonomous_flow_runner.py  test_autonomous_flow_scheduler_action_contract.py  test_autonomous_flow_scheduler_action_executor.py  test_claim_ceiling.py  (+113 more)
(+766 files in other folders)
